--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -103,8 +103,8 @@
     "paring_connect_appliance_to_wifi": "SPOJITE KUĆANSKI UREĐAJ NA WI-FI",
     "paring_enter_wifi_password": "Unesite WiFi lozinku",
     "auto_manual_trigger": "Ručno",
-    "auto_add_scene_lowercase": "Dodajte scenu",
-    "auto_name_your_scene": "Nazovite svoju scenu",
+    "auto_add_scene_lowercase": "Dodajte",
+    "auto_name_your_scene": "Imenujte",
     "auto_title_select_trigger": "ODABERI OKIDAČ",
     "auto_action": "RADNJA",
     "auto_trigger_lowercase": "Okidač",
@@ -155,7 +155,7 @@
     "ac_electricity_statistics": "Statistika",
     "ac_temperature_unit": "Temperaturna jedinica",
     "ac_manual_examination": "Dijagnostika",
-    "ac_last_examination_date": "Posljednje",
+    "ac_last_examination_date": "Datum posljednjeg ispita",
     "ac_auto": "Auto",
     "ac_air_supply": "Ventilator",
     "ac_dehumidify": "Suho",
@@ -165,7 +165,7 @@
     "ac_sure": "SIGURNO",
     "ac_auto_wind": "Automatski",
     "ac_super_high_wind": "Super jak vjetar",
-    "ac_middle_wind": "Srednji vjetar",
+    "ac_middle_wind": "Srednji protok zraka",
     "ac_high_wind": "Jak vjetar",
     "ac_low_wind": "Slab vjetar",
     "ac_super_low_wind": "Super slab vjetar",
@@ -192,7 +192,7 @@
     "ac_time_range": "VREMENSKI RASPON",
     "ac_sessions_hours": "Dnevna potrošnja",
     "ac_cumulative_month": "Mjesečna",
-    "ac_up_down_wind": "Gore-dolje vjetar",
+    "ac_up_down_wind": "Gore-dolje protok zraka",
     "one": "Pon",
     "two": "Uto",
     "three": "Sri",
@@ -251,11 +251,11 @@
     "ac_cmd_send_success": "Naredba je uspješno poslana！",
     "ac_cmd_send_fail": "Greška kod slanja naredbe！",
     "ac_fav_name_empty": "Molimo vas da unesete ime omiljene postavke!",
-    "ac_please_select_mode": "Molimo vas da odaberete način！",
+    "ac_please_select_mode": "Molimo vas da odaberete način rada！",
     "ac_please_select_temp": "Molimo vas da odaberete ciljnu temperaturu！",
     "ac_please_select_speed": "Molimo odaberite brzinu protoka zraka！",
     "ac_please_select_humidity": "Molimo odaberite ciljnu vlažnost!",
-    "ac_AI_control_hint": "AI: klimatska naprava izmjeri vanjsku temperaturu, unutarnju temperaturu i vlažnost, temperaturnu otpornost odjeće, sijevanje, brzinu protoka zraka, kao i druge parametre kako bi pružila najveću udobnost te brzo hlađenje ili zagrijavanje jednim samim pritiskom na tipku. Nakon toga automatski nadzire temperaturu, vlažnost, brzinu protoka zraka, te smjer strujanja zraka u prostoriju. Na taj način omogućuje nježno zračno strujanje i hlađenje koje djeluje kao tuš, a da ne puše izravno u korisnika i prouzrokuje prehlade. Zagrijavanje u stilu podnog grijanja će zagrijati vaše noge i omogućiti udobnost u prostoriji, a istovremeno će se pobrinuti i za zdravlje starijih osoba, djece, i trudnica.",
+    "ac_AI_control_hint": "AI: klimatska naprava izmjeri vanjsku temperaturu, unutarnju temperaturu i vlažnost, temperaturnu otpornost, brzinu protoka zraka, kao i druge parametre kako bi pružila najveću udobnost te brzo hlađenje ili zagrijavanje jednim samim pritiskom na tipku. Nakon toga automatski nadzire temperaturu, vlažnost, brzinu protoka zraka, te smjer strujanja zraka u prostoriju. Na taj način omogućuje nježno zračno strujanje i hlađenje koje djeluje osvježavajuće, bez da puše izravno u korisnika i potencijalno prouzrokuje prehlade. Zagrijavanje u stilu podnog grijanja će zagrijati vaše noge i omogućiti udobnost u prostoriji, a istovremeno će se pobrinuti i za zdravlje starijih osoba, djece, i trudnica.",
     "ac_select_mode": "ODABIR NAČINA",
     "ac_select_wind_speed": "BRZINA PROTOKA ZRAKA",
     "ac_diagnose_normal": "Uobičajeno pranje",
@@ -671,7 +671,7 @@
     "reset_re_enter_psw": "Potvrdite novu lozinku",
     "resend_verification_code": "PONOVO DOHVATITE KOD ZA PROVJERAVANJE",
     "resend_try_again_ver": "MOLIMO PPOKUŠAJTE PONOVO NAKON %d SEKUNDI.",
-    "register_verification_tips_edit": "Na adresu %s smo poslali poruku s kodom za provjeravanje.\nMolimo da za nastavak registracije unesete kod za provjeravanje iz elektroničke poruke.",
+    "register_verification_tips_edit": "Poslali smo kontrolni kod na 1. Molimo unesite kontrolni kod za nastavak registracije.",
     "register_terms_conditions_agree": "Prihvatite <u>Opće uvjete za krajnjeg korisnika</u>",
     "register_privacy_policy_agree": "Prihvatite <u>Politiku privatnosti</u>",
     "verification_code_get_success": "Kod za provjeravanje je uspješno poslan.",
@@ -866,9 +866,9 @@
     "atag_oven_cs_step_6": "Odaberite \"On\" u izborniku \"CSEt\" i potvrdite pritiskom gumba. Wi-Fi simbol će treperiti punim intenzitetom.\n Pritisnite DALJE za nastavak.",
     "hih_filter_grease": "Filter za masnoću",
     "hih_filter_clean_hours": "Očistite filter za %d h",
-    "hih_filter_recirculation": "Filtar 1: %s",
+    "hih_filter_recirculation": "Filter 1: %s",
     "hih_filter_overdue": "Očistite filter! Kasni %d h",
-    "hih_timer_hint": "Ako ste promijenili filtar, poništite mjerač vremena kako biste dobili točne obavijesti o čišćenju.",
+    "hih_timer_hint": "Ako ste promijenili filter, poništite mjerač vremena kako biste dobili točne obavijesti o čišćenju.",
     "go_to_your_oven_to_confirm": "Idite do svoje pećnice da potvrdite.",
     "cooking_settings": "POSTAVKE KUHANJA",
     "time_settings": "POSTAVKE VREMENA",
@@ -877,7 +877,7 @@
     "time_format": "FORMAT VREMENA",
     "volume": "VOLUMEN",
     "display_settings": "POSTAVKE ZASLONA",
-    "display_brightness": "SVJETLINA ZASLON",
+    "display_brightness": "OSVJETLJENJE ZASLONA",
     "display_language": "JEZIK PRIKAZA",
     "night_mode": "NOĆNI NAČIN",
     "atag_oven_p_step_3": "Okrenite središnju tipku za odabir \"PAr\" i potvrdite odabir.",
@@ -1797,7 +1797,7 @@
     "wm_cancel_link": "Otkaži Vezu",
     "wm_no_bind_dryer": "Nije nađena povezana sušilica",
     "wm_bind_dryer": "POVEŽI SUŠILICU",
-    "key_lock_name": "Ključanica",
+    "key_lock_name": "Zaključavanje",
     "CI": "Cote d'Ivoire",
     "TZ": "Tanzania",
     "RE": "Reunion Island",
@@ -1908,9 +1908,9 @@
     "add_wine_success": "Uspješno dodano",
     "dont_show_again": "Ne prikazuj više ovu poruku",
     "pind_status_bridge": "Most",
-    "wm_most_usage_week": "Najveća upotreba tjedna",
-    "wm_most_usage_month": "Najveća upotreba mjeseca",
-    "wm_most_usage_year": "Najveća upotreba godine",
+    "wm_most_usage_week": "Tjedna najveća upotreba",
+    "wm_most_usage_month": "Mjesečna najveća upotreba",
+    "wm_most_usage_year": "Godišnja najveća upotreba",
     "wm_energy_usage_period": "Razdoblje korištenja energije",
     "program_name_pillow": "Jastuk (perje)",
     "program_name_fast89": "Brzo pranje 89'",
@@ -2450,7 +2450,7 @@
     "dhw_key": "DHW",
     "holiday_start_in_days": "Počinje za ## dana",
     "end_time_forever_key": "zauvijek",
-    "duct_power_statistics": "Energetski monitor",
+    "duct_power_statistics": "Energy Monitor",
     "dimmer": "Prigušivač",
     "swing_des": "Klima uređaj čini temperaturu zraka ravnomjernijom i ugodnijom puhanjem zraka gore i dolje.",
     "beep_des": "Isključite zujalicu za tiše okruženje.",
@@ -2481,7 +2481,7 @@
     "looking_for_manuals": "Traženje priručnika…",
     "add_devices_to_room": "Odaberite jedan ili više uređaja koje želite dodati u xx.",
     "recipe_bake_step_load_fail": "Korak učitavanja recepta za pečenje nije uspio",
-    "security_upgrade_content": "Predani smo pružanju najboljeg iskustva aplikacije i osiguravanju sigurnosti vaših podataka. Zato <b>uvodimo veliko ažuriranje</b> zajedno s <b>iskustvom jednostruke prijave</b> na svim našim platformama. \n\nDa biste nastavili koristiti ovu aplikaciju morat ćete <b>poništiti zaporku.</b>\n\n<b>Jeste li već poništili zaporku? Ako ste već promijenili lozinku, kliknite Odustani i potvrdite da ste je ispravno unijeli.</b>\nNije potrebna nikakva daljnja radnja. Spremni ste!",
+    "security_upgrade_content": "Predani smo pružanju najboljeg iskustva aplikacije i osiguravanju sigurnosti vaših podataka. Zato <b>uvodimo veliko ažuriranje</b> zajedno s <b>iskustvom jednostruke prijave</b> na svim našim platformama. \n\nDa biste nastavili koristiti ovu aplikaciju morati ćete <b>poništiti zaporku.</b>\n\n<b>Jeste li već poništili zaporku? Ako ste već promijenili lozinku, kliknite Odustani i potvrdite da ste je ispravno unijeli.</b>\nNije potrebna nikakva daljnja radnja. Spremni ste!",
     "security_upgrade": "VAŽNO AŽURIRANJE",
     "send_reset_link": "POŠALJI LINK ZA RESETIRANJE",
     "sent_reset_email": "Poslali smo vezu za ponovno postavljanje lozinke na %s.",
@@ -2540,7 +2540,7 @@
     "device_none_notification_tips": "Nećete primati nikakve obavijesti, uključujući sva ažuriranja vezana uz uređaj kao ni hitne obavijesti koje zahtijevaju hitnu pozornost.",
     "ac_duct_type": "Kanalni tip klima uređaja",
     "duct_silent": "Tiho",
-    "timer_name_not_less_2_length": "naziv mjerača vremena ne manji od 2 duljine",
+    "timer_name_not_less_2_length": "naziv timera ne manji od 2 duljine",
     "push_notifications_settings_tips": "Primajte obavijesti i upozorenja kao push obavijesti na svom telefonu, čak i kada ne koristite aktivno aplikaciju ConnectLife.",
     "show_only_unread": "Prikaži samo nepročitano",
     "setting_dairy_allergy": "Mliječni proizvodi",
@@ -3409,7 +3409,7 @@
     "dw_uv_mode": "UV način",
     "dw_storage_mode": "Način pohrane",
     "air_shower": "Zračni tuš",
-    "enable_air_shower": "Omogući/onemogući zračni tuš",
+    "enable_air_shower": "Omogući/onemogući protok",
     "air_shower_desc": "Ova funkcija može pomoći u poboljšanju učinkovitosti perilice rublja smanjenjem opterećenja u ciklusu centrifuge, što može smanjiti uništavanje perilice i produljiti njezin životni vijek.",
     "hum_safe_range": "Siguran raspon za dugotrajno skladištenje vinskih boca je između 50% i 80%. Kratki pad vlage neće utjecati na kvalitetu. To se može dogoditi pri otvaranju vrata.",
     "use_humidity": "Koristite kutiju za vlažnost za regulaciju vlažnosti",
@@ -3997,7 +3997,7 @@
     "CL_CF_LG_legal": "Pravno",
     "CL_CF_LG_enduser_privacy": "Politika privatnosti podataka",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## rad u ECO načinu",
-    "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
+    "CL_CF_UC_full_name_with_title": "{mrs} {Dinka} {Kruško}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Ovisno o načinu rada uređaja, neke se značajke možda neće uspješno izvršiti.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Veliki grijač + ventilator + mikrovalovi",
     "CL_DV_OV_baking_stopped": "Pečenje ## je zaustavljeno.",
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "Odaberite datum početka i završetka!",
     "CL_SL_CM_recommended_program": "Preporučeno",
-    "CL_SL_CM_rpm": "broj okretaja u minuti"
+    "CL_SL_CM_rpm": "broj okretaja u minuti",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
