--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "يرجى تحديد تاريخ البدء والانتهاء!",
     "CL_SL_CM_recommended_program": "مُستَحسَن",
-    "CL_SL_CM_rpm": "دورة في الدقيقة"
+    "CL_SL_CM_rpm": "دورة في الدقيقة",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
