--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "Bitte wählen Sie ein Anfangs- und Enddatum aus!",
     "CL_SL_CM_recommended_program": "Empfohlen",
-    "CL_SL_CM_rpm": "U/min"
+    "CL_SL_CM_rpm": "U/min",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
