--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "Επιλέξτε ημερομηνία έναρξης και λήξης!",
     "CL_SL_CM_recommended_program": "Συνιστάται",
-    "CL_SL_CM_rpm": "σ.α.λ"
+    "CL_SL_CM_rpm": "σ.α.λ",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
