--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "Seleccione una fecha de inicio y fin.",
     "CL_SL_CM_recommended_program": "Recomendado",
-    "CL_SL_CM_rpm": "RPM"
+    "CL_SL_CM_rpm": "RPM",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
