--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "Veuillez sélectionner une date de début et une date de fin !",
     "CL_SL_CM_recommended_program": "Recommandé",
-    "CL_SL_CM_rpm": "tr/min"
+    "CL_SL_CM_rpm": "tr/min",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
