--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "** ore prima del piano",
     "CL_CF_CO_select_time_tips": "Selezionare un orario di inizio e di fine!",
     "CL_SL_CM_recommended_program": "Raccomandato",
-    "CL_SL_CM_rpm": "giri al minuto"
+    "CL_SL_CM_rpm": "giri al minuto",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
