--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "Басталу және аяқталу күнін таңдаңыз!",
     "CL_SL_CM_recommended_program": "Ұсынылады",
-    "CL_SL_CM_rpm": "айн/мин"
+    "CL_SL_CM_rpm": "айн/мин",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
