--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "Изберете датум на започнување и завршување!",
     "CL_SL_CM_recommended_program": "Препорачано",
-    "CL_SL_CM_rpm": "вртежи во минута"
+    "CL_SL_CM_rpm": "вртежи во минута",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
