--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "",
     "CL_SL_CM_recommended_program": "Disyorkan",
-    "CL_SL_CM_rpm": "rpm"
+    "CL_SL_CM_rpm": "rpm",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
