--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "Selecteer een start- en einddatum!",
     "CL_SL_CM_recommended_program": "Aanbevolen",
-    "CL_SL_CM_rpm": "toerental"
+    "CL_SL_CM_rpm": "toerental",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
