--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "Выберите дату начала и дату окончания!",
     "CL_SL_CM_recommended_program": "Рекомендовано",
-    "CL_SL_CM_rpm": "об/мин"
+    "CL_SL_CM_rpm": "об/мин",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
