--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4671,5 +4671,6 @@
     "CL_DV_RF_x_hours_before_the_plan": "",
     "CL_CF_CO_select_time_tips": "Vui lòng chọn một ngày bắt đầu và kết thúc!",
     "CL_SL_CM_recommended_program": "Khuyến khích",
-    "CL_SL_CM_rpm": "vòng/phút"
+    "CL_SL_CM_rpm": "vòng/phút",
+    "CL_DV_HOB_step2_cooking_used": ""
 }
